// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuContent Menu opens show menu and changes backdrop pointer events 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuHelperContent
    closeBackdrop={[Function]}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    showMenu={[Function]}
    viewMenu={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="decred-ui-navbar-menu-button"
          onClick={[Function]}
>
          <svg
                    height="30"
                    viewBox="0 0 448 512"
                    width="26.25"
                    xmlns="http://www.w3.org/2000/svg"
          >
                    <path
                              className="decred-ui-navbar-menu-bars"
                              d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
                    />
          </svg>
</button>,
        <button
          className="decred-ui-navbar-menu-backdrop"
          onClick={[Function]}
          style={
                    Object {
                              "pointerEvents": "auto",
                            }
          }
>
          <div
                    className="decred-ui-navbar-menu decred-ui-navbar-menu-show"
          >
                    <ul>
                              <NavLink
                                        activeClassName="active"
                                        ariaCurrent="true"
                                        className="decred-ui-navbar-menu-navlink"
                                        to="/testroute"
                              >
                                        <li>
                                                  testroute
                                        </li>
                              </NavLink>
                    </ul>
          </div>
</button>,
      ],
      "className": "decred-ui-navbar-menu-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            height="30"
            viewBox="0 0 448 512"
            width="26.25"
            xmlns="http://www.w3.org/2000/svg"
>
            <path
                        className="decred-ui-navbar-menu-bars"
                        d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
            />
</svg>,
          "className": "decred-ui-navbar-menu-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <path
              className="decred-ui-navbar-menu-bars"
              d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
/>,
            "height": "30",
            "viewBox": "0 0 448 512",
            "width": "26.25",
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "decred-ui-navbar-menu-bars",
              "d": "M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="decred-ui-navbar-menu decred-ui-navbar-menu-show"
>
            <ul>
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    className="decred-ui-navbar-menu-navlink"
                                    to="/testroute"
                        >
                                    <li>
                                                testroute
                                    </li>
                        </NavLink>
            </ul>
</div>,
          "className": "decred-ui-navbar-menu-backdrop",
          "onClick": [Function],
          "style": Object {
            "pointerEvents": "auto",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            className="decred-ui-navbar-menu-navlink"
                            to="/testroute"
              >
                            <li>
                                          testroute
                            </li>
              </NavLink>
</ul>,
            "className": "decred-ui-navbar-menu decred-ui-navbar-menu-show",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  className="decred-ui-navbar-menu-navlink"
                  to="/testroute"
>
                  <li>
                                    testroute
                  </li>
</NavLink>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "testroute",
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": <li>
                    testroute
</li>,
                  "className": "decred-ui-navbar-menu-navlink",
                  "to": "/testroute",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "testroute",
                  },
                  "ref": null,
                  "rendered": "testroute",
                  "type": "li",
                },
                "type": [Function],
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="decred-ui-navbar-menu-button"
            onClick={[Function]}
>
            <svg
                        height="30"
                        viewBox="0 0 448 512"
                        width="26.25"
                        xmlns="http://www.w3.org/2000/svg"
            >
                        <path
                                    className="decred-ui-navbar-menu-bars"
                                    d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
                        />
            </svg>
</button>,
          <button
            className="decred-ui-navbar-menu-backdrop"
            onClick={[Function]}
            style={
                        Object {
                                    "pointerEvents": "auto",
                                  }
            }
>
            <div
                        className="decred-ui-navbar-menu decred-ui-navbar-menu-show"
            >
                        <ul>
                                    <NavLink
                                                activeClassName="active"
                                                ariaCurrent="true"
                                                className="decred-ui-navbar-menu-navlink"
                                                to="/testroute"
                                    >
                                                <li>
                                                            testroute
                                                </li>
                                    </NavLink>
                        </ul>
            </div>
</button>,
        ],
        "className": "decred-ui-navbar-menu-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              height="30"
              viewBox="0 0 448 512"
              width="26.25"
              xmlns="http://www.w3.org/2000/svg"
>
              <path
                            className="decred-ui-navbar-menu-bars"
                            d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
              />
</svg>,
            "className": "decred-ui-navbar-menu-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <path
                className="decred-ui-navbar-menu-bars"
                d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
/>,
              "height": "30",
              "viewBox": "0 0 448 512",
              "width": "26.25",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "decred-ui-navbar-menu-bars",
                "d": "M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z",
              },
              "ref": null,
              "rendered": null,
              "type": "path",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="decred-ui-navbar-menu decred-ui-navbar-menu-show"
>
              <ul>
                            <NavLink
                                          activeClassName="active"
                                          ariaCurrent="true"
                                          className="decred-ui-navbar-menu-navlink"
                                          to="/testroute"
                            >
                                          <li>
                                                        testroute
                                          </li>
                            </NavLink>
              </ul>
</div>,
            "className": "decred-ui-navbar-menu-backdrop",
            "onClick": [Function],
            "style": Object {
              "pointerEvents": "auto",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                className="decred-ui-navbar-menu-navlink"
                                to="/testroute"
                >
                                <li>
                                                testroute
                                </li>
                </NavLink>
</ul>,
              "className": "decred-ui-navbar-menu decred-ui-navbar-menu-show",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="decred-ui-navbar-menu-navlink"
                    to="/testroute"
>
                    <li>
                                        testroute
                    </li>
</NavLink>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "testroute",
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "ariaCurrent": "true",
                    "children": <li>
                      testroute
</li>,
                    "className": "decred-ui-navbar-menu-navlink",
                    "to": "/testroute",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "testroute",
                    },
                    "ref": null,
                    "rendered": "testroute",
                    "type": "li",
                  },
                  "type": [Function],
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MenuContent Renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuHelperContent
    closeBackdrop={[Function]}
    links={
        Array [
            Object {
              "route": "/testroute",
              "text": "testroute",
            },
          ]
    }
    showMenu={[Function]}
    viewMenu={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="decred-ui-navbar-menu-button"
          onClick={[Function]}
>
          <svg
                    height="30"
                    viewBox="0 0 448 512"
                    width="26.25"
                    xmlns="http://www.w3.org/2000/svg"
          >
                    <path
                              className="decred-ui-navbar-menu-bars"
                              d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
                    />
          </svg>
</button>,
        <button
          className="decred-ui-navbar-menu-backdrop"
          onClick={[Function]}
          style={
                    Object {
                              "pointerEvents": "none",
                            }
          }
>
          <div
                    className="decred-ui-navbar-menu decred-ui-navbar-menu-hide"
          >
                    <ul>
                              <NavLink
                                        activeClassName="active"
                                        ariaCurrent="true"
                                        className="decred-ui-navbar-menu-navlink"
                                        to="/testroute"
                              >
                                        <li>
                                                  testroute
                                        </li>
                              </NavLink>
                    </ul>
          </div>
</button>,
      ],
      "className": "decred-ui-navbar-menu-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            height="30"
            viewBox="0 0 448 512"
            width="26.25"
            xmlns="http://www.w3.org/2000/svg"
>
            <path
                        className="decred-ui-navbar-menu-bars"
                        d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
            />
</svg>,
          "className": "decred-ui-navbar-menu-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <path
              className="decred-ui-navbar-menu-bars"
              d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
/>,
            "height": "30",
            "viewBox": "0 0 448 512",
            "width": "26.25",
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "decred-ui-navbar-menu-bars",
              "d": "M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="decred-ui-navbar-menu decred-ui-navbar-menu-hide"
>
            <ul>
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    className="decred-ui-navbar-menu-navlink"
                                    to="/testroute"
                        >
                                    <li>
                                                testroute
                                    </li>
                        </NavLink>
            </ul>
</div>,
          "className": "decred-ui-navbar-menu-backdrop",
          "onClick": [Function],
          "style": Object {
            "pointerEvents": "none",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            className="decred-ui-navbar-menu-navlink"
                            to="/testroute"
              >
                            <li>
                                          testroute
                            </li>
              </NavLink>
</ul>,
            "className": "decred-ui-navbar-menu decred-ui-navbar-menu-hide",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  className="decred-ui-navbar-menu-navlink"
                  to="/testroute"
>
                  <li>
                                    testroute
                  </li>
</NavLink>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "testroute",
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": <li>
                    testroute
</li>,
                  "className": "decred-ui-navbar-menu-navlink",
                  "to": "/testroute",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "testroute",
                  },
                  "ref": null,
                  "rendered": "testroute",
                  "type": "li",
                },
                "type": [Function],
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="decred-ui-navbar-menu-button"
            onClick={[Function]}
>
            <svg
                        height="30"
                        viewBox="0 0 448 512"
                        width="26.25"
                        xmlns="http://www.w3.org/2000/svg"
            >
                        <path
                                    className="decred-ui-navbar-menu-bars"
                                    d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
                        />
            </svg>
</button>,
          <button
            className="decred-ui-navbar-menu-backdrop"
            onClick={[Function]}
            style={
                        Object {
                                    "pointerEvents": "none",
                                  }
            }
>
            <div
                        className="decred-ui-navbar-menu decred-ui-navbar-menu-hide"
            >
                        <ul>
                                    <NavLink
                                                activeClassName="active"
                                                ariaCurrent="true"
                                                className="decred-ui-navbar-menu-navlink"
                                                to="/testroute"
                                    >
                                                <li>
                                                            testroute
                                                </li>
                                    </NavLink>
                        </ul>
            </div>
</button>,
        ],
        "className": "decred-ui-navbar-menu-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              height="30"
              viewBox="0 0 448 512"
              width="26.25"
              xmlns="http://www.w3.org/2000/svg"
>
              <path
                            className="decred-ui-navbar-menu-bars"
                            d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
              />
</svg>,
            "className": "decred-ui-navbar-menu-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <path
                className="decred-ui-navbar-menu-bars"
                d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"
/>,
              "height": "30",
              "viewBox": "0 0 448 512",
              "width": "26.25",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "decred-ui-navbar-menu-bars",
                "d": "M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z",
              },
              "ref": null,
              "rendered": null,
              "type": "path",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="decred-ui-navbar-menu decred-ui-navbar-menu-hide"
>
              <ul>
                            <NavLink
                                          activeClassName="active"
                                          ariaCurrent="true"
                                          className="decred-ui-navbar-menu-navlink"
                                          to="/testroute"
                            >
                                          <li>
                                                        testroute
                                          </li>
                            </NavLink>
              </ul>
</div>,
            "className": "decred-ui-navbar-menu-backdrop",
            "onClick": [Function],
            "style": Object {
              "pointerEvents": "none",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                className="decred-ui-navbar-menu-navlink"
                                to="/testroute"
                >
                                <li>
                                                testroute
                                </li>
                </NavLink>
</ul>,
              "className": "decred-ui-navbar-menu decred-ui-navbar-menu-hide",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NavLink
                    activeClassName="active"
                    ariaCurrent="true"
                    className="decred-ui-navbar-menu-navlink"
                    to="/testroute"
>
                    <li>
                                        testroute
                    </li>
</NavLink>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "testroute",
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "ariaCurrent": "true",
                    "children": <li>
                      testroute
</li>,
                    "className": "decred-ui-navbar-menu-navlink",
                    "to": "/testroute",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "testroute",
                    },
                    "ref": null,
                    "rendered": "testroute",
                    "type": "li",
                  },
                  "type": [Function],
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
